--- a/.github/workflows/deploy-azure-func.yaml
+++ b/.github/workflows/deploy-azure-func.yaml
@@ -23,6 +23,10 @@ jobs:
           python-version: "3.12"
           cache: pip
           cache-dependency-path: requirements.txt
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc g++ python3-dev
       - name: Validate requirements.txt
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
         shell: bash
@@ -75,6 +79,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc g++ python3-dev
+      - name: Check pip configuration
+        working-directory: ${{ env.FUNCTIONAPP_DIR }}
+        shell: bash
+        run: |
+          python -m pip config list
       - name: Validate requirements.txt
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
         shell: bash
@@ -94,23 +103,10 @@ jobs:
           TARGET=".python_packages/lib/site-packages"
           mkdir -p "$TARGET"
           python -m pip install --upgrade pip wheel
-          echo "Installing peewee separately..."
+          echo "Installing dependencies with retry..."
           for attempt in {1..3}; do
-            echo "Attempt $attempt for peewee..."
-            python -m pip install --target "$TARGET" peewee==3.18.2 --verbose > pip_install_peewee.log 2>&1 && break
-            echo "Retry $attempt for peewee failed, waiting 5 seconds..."
-            sleep 5
-            if [ $attempt -eq 3 ]; then
-              echo "ERROR: pip install peewee failed after 3 attempts" >&2
-              cat pip_install_peewee.log
-              exit 1
-            fi
-          done
-          cat pip_install_peewee.log
-          echo "Installing remaining dependencies..."
-          for attempt in {1..3}; do
-            echo "Attempt $attempt for requirements.txt..."
-            python -m pip install --only-binary=:all: --target "$TARGET" -r requirements.txt --verbose > pip_install.log 2>&1 && break
+            echo "Attempt $attempt..."
+            python -m pip install --target "$TARGET" -r requirements.txt --verbose > pip_install.log 2>&1 && break
             echo "Retry $attempt failed, waiting 5 seconds..."
             sleep 5
             if [ $attempt -eq 3 ]; then
@@ -120,7 +116,7 @@ jobs:
             fi
           done
           cat pip_install.log
-          if grep -i "error" pip_install.log || grep -i "error" pip_install_peewee.log; then
+          if grep -i "error" pip_install.log; then
             echo "ERROR: pip install encountered errors" >&2
             exit 1
           fi
